--- a/MSR/MSR-2.1-Management-Summary.jrxml
+++ b/MSR/MSR-2.1-Management-Summary.jrxml
@@ -96,16 +96,16 @@
 	<pageHeader>
 		<band height="68" splitType="Stretch">
 			<textField>
-				<reportElement style="headerDocumentTitle" x="0" y="10" width="290" height="21" uuid="e6196853-2085-414b-b530-4a9a8f02734e"/>
+				<reportElement style="headerDocumentTitle" x="0" y="10" width="310" height="21" uuid="e6196853-2085-414b-b530-4a9a8f02734e"/>
 				<textFieldExpression><![CDATA[$P{coverTitle}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="0" y="32" width="483" height="1" uuid="d09819fc-4982-4636-b9e9-e96aaa844363"/>
 			</line>
 			<textField evaluationTime="Master">
-				<reportElement style="headerPageNumbers" x="283" y="1" width="200" height="30" uuid="9544801a-8579-487a-b2e9-d2d7613b3ae0"/>
+				<reportElement style="headerPageNumbers" x="320" y="0" width="163" height="32" uuid="3d6cd5bf-d4c2-47b3-a68c-08b4c06261dc"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[DATEFORMAT(TODAY(),"dd MMM yyyy")+ " | Page " + $V{MASTER_CURRENT_PAGE} + " of " + $V{MASTER_TOTAL_PAGES}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Reporting Period " + DATEFORMAT(DATE(INTEGER_VALUE(MID($P{selectedDate},1,4)),INTEGER_VALUE(MID($P{selectedDate},5,2)),INTEGER_VALUE(MID($P{selectedDate},7,2))),"MMM yyyy")+ " | Page " + $V{MASTER_CURRENT_PAGE} + " of " + $V{MASTER_TOTAL_PAGES}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
