--- a/MSR/MSR-4.1-Sentinel-BU.jrxml
+++ b/MSR/MSR-4.1-Sentinel-BU.jrxml
@@ -328,16 +328,16 @@
 	<pageHeader>
 		<band height="68" splitType="Stretch">
 			<textField>
-				<reportElement style="headerDocumentTitle" x="0" y="10" width="290" height="21" uuid="e6196853-2085-414b-b530-4a9a8f02734e"/>
+				<reportElement style="headerDocumentTitle" x="0" y="10" width="560" height="21" uuid="e6196853-2085-414b-b530-4a9a8f02734e"/>
 				<textFieldExpression><![CDATA[$P{coverTitle}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="0" y="32" width="730" height="1" uuid="d09819fc-4982-4636-b9e9-e96aaa844363"/>
 			</line>
 			<textField evaluationTime="Master">
-				<reportElement style="headerPageNumbers" x="530" y="0" width="200" height="30" uuid="9544801a-8579-487a-b2e9-d2d7613b3ae0"/>
+				<reportElement style="headerPageNumbers" x="567" y="0" width="163" height="32" uuid="87d7f1eb-1cdf-4d01-9d6e-86d6e96f2cf4"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[DATEFORMAT(TODAY(),"dd MMM yyyy")+ " | Page " + $V{MASTER_CURRENT_PAGE} + " of " + $V{MASTER_TOTAL_PAGES}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Reporting Period " + DATEFORMAT(DATE(INTEGER_VALUE(MID($P{selectedDate},1,4)),INTEGER_VALUE(MID($P{selectedDate},5,2)),INTEGER_VALUE(MID($P{selectedDate},7,2))),"MMM yyyy")+ " | Page " + $V{MASTER_CURRENT_PAGE} + " of " + $V{MASTER_TOTAL_PAGES}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
