--- a/MSR/MSR-Introduction.jrxml
+++ b/MSR/MSR-Introduction.jrxml
@@ -16,6 +16,9 @@
 	<parameter name="chapter" class="java.lang.Integer">
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
 	</parameter>
+	<parameter name="selectedDate" class="java.lang.String">
+		<defaultValueExpression><![CDATA["20190801"]]></defaultValueExpression>
+	</parameter>
 	<queryString>
 		<![CDATA[select 1]]>
 	</queryString>
@@ -43,16 +46,16 @@
 	<pageHeader>
 		<band height="68" splitType="Stretch">
 			<textField>
-				<reportElement style="headerDocumentTitle" x="0" y="10" width="290" height="21" uuid="e6196853-2085-414b-b530-4a9a8f02734e"/>
+				<reportElement style="headerDocumentTitle" x="0" y="10" width="310" height="21" uuid="e6196853-2085-414b-b530-4a9a8f02734e"/>
 				<textFieldExpression><![CDATA[$P{coverTitle}]]></textFieldExpression>
 			</textField>
 			<line>
 				<reportElement x="0" y="32" width="483" height="1" uuid="d09819fc-4982-4636-b9e9-e96aaa844363"/>
 			</line>
 			<textField evaluationTime="Master">
-				<reportElement style="headerPageNumbers" x="283" y="0" width="200" height="30" uuid="9544801a-8579-487a-b2e9-d2d7613b3ae0"/>
+				<reportElement style="headerPageNumbers" x="320" y="0" width="163" height="32" uuid="05b74d8b-c79f-4364-a0be-4de005bfc63e"/>
 				<textElement textAlignment="Right"/>
-				<textFieldExpression><![CDATA[DATEFORMAT(TODAY(),"dd MMM yyyy")+ " | Page " + $V{MASTER_CURRENT_PAGE} + " of " + $V{MASTER_TOTAL_PAGES}]]></textFieldExpression>
+				<textFieldExpression><![CDATA["Reporting Period " + DATEFORMAT(DATE(INTEGER_VALUE(MID($P{selectedDate},1,4)),INTEGER_VALUE(MID($P{selectedDate},5,2)),INTEGER_VALUE(MID($P{selectedDate},7,2))),"MMM yyyy")+ " | Page " + $V{MASTER_CURRENT_PAGE} + " of " + $V{MASTER_TOTAL_PAGES}]]></textFieldExpression>
 			</textField>
 		</band>
 	</pageHeader>
